--- a/src/components/TermsModal/TermsModal.module.css
+++ b/src/components/TermsModal/TermsModal.module.css
@@ -1,41 +1,47 @@
 .termsModal {
     max-height: 90vh;
+    color: black;
 }
 
 .termsContent {
     max-height: 60vh;
     overflow-y: auto;
     padding-right: 16px;
+    color: black;
 }
 
 .termsContent h3 {
     margin-top: 24px;
-    color: #2B2D42;
+    color: black;
 }
 
 .termsContent p {
     margin-bottom: 16px;
     text-align: justify;
     line-height: 1.6;
+    color: black;
 }
 
-/* Estilização da scrollbar */
 .termsContent::-webkit-scrollbar {
     width: 6px;
+    color: black;
 }
 
 .termsContent::-webkit-scrollbar-track {
     background: #f1f1f1;
     border-radius: 3px;
+    color: black;
 }
 
 .termsContent::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 3px;
+    color: black;
 }
 
 .termsContent::-webkit-scrollbar-thumb:hover {
     background: #555;
+    color: black;
 }
 
 /* Suporte para High Contrast Mode */
